# CourseBox

./: .env.sample  .gitignore  Dockerfile  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yaml  pyproject.toml
.github/workflow/: ci_cd.yml
.github/workflows/: ci_cd.yml
config/: settings.py  urls.py
materials/: models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_subscription.py  0004_course_updated_at.py
users/: admin.py  filters.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: create_groups.py  fill_payments.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_payment.py  0004_rename_paid_lessons_payment_paid_lesson.py  0005_payment_payment_url_payment_strip_price_id_and_more.py
